[package]
name = "prometheus_smartctl_temperature_exporter"
version = "1.1.1"
authors                  = ["Francesco Cogno <francesco.cogno@outlook.com>"]
description              = "Prometheus smartctl temperature exporter"
edition = "2021"

readme                   = "README.md"
license                  = "MIT"
repository               = "https://github.com/MindFlavor/prometheus_smartctl_temperature_exporter"
documentation            = "https://github.com/MindFlavor/prometheus_smartctl_temperature_exporter"
homepage                 = "https://github.com/MindFlavor/prometheus_smartctl_temperature_exporter"

keywords                 = ["prometheus", "exporter", "smartctl", "temperature"]
categories               = ["database"]

[dependencies]
log                      = "0.4.14"
env_logger               = "0.8.4"
clap                     = "2.33.0"
serde_json               = "1.0"
serde                    = { version       = "1.0", features = ["derive"] }
serde_derive             = "1.0"
thiserror		 = "1.0"
hyper                    = { version       = "0.14", features = ["stream"] }
tokio                    = { version 	   = "1.0", features = ["macros", "rt"] }
prometheus_exporter_base = { version       = "1.3", features = ["hyper_server"] }
regex			 = "1.5"
